// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Toggle Custom size togglers 1`] = `
<div
  style={
    Object {
      "padding": "2rem",
    }
  }
>
  <div
    className="sc-bjUoiL kSznns rts-toggle__container undefined"
    data-element="toggle"
    height={12.5}
    width={25}
  >
    <input
      className="sc-dIouRR lbbvWS rts-toggle__toggle"
      data-element="toggle-input"
      type="checkbox"
    />
    <span
      className="sc-idiyUo cycHVg rts-toggle__background"
      data-element="toggle-background"
      height={12.5}
    />
  </div>
  <div
    className="sc-bjUoiL iXvHuV rts-toggle__container undefined"
    data-element="toggle"
    height={25}
    width={50}
  >
    <input
      className="sc-dIouRR cHWdFL rts-toggle__toggle"
      data-element="toggle-input"
      type="checkbox"
    />
    <span
      className="sc-idiyUo klHLrj rts-toggle__background"
      data-element="toggle-background"
      height={25}
    />
  </div>
  <div
    className="sc-bjUoiL iGQDiL rts-toggle__container undefined"
    data-element="toggle"
    height={37.5}
    width={75}
  >
    <input
      className="sc-dIouRR gsDHyP rts-toggle__toggle"
      data-element="toggle-input"
      type="checkbox"
    />
    <span
      className="sc-idiyUo gHJHQ rts-toggle__background"
      data-element="toggle-background"
      height={37.5}
    />
  </div>
  <div
    className="sc-bjUoiL cbNcCk rts-toggle__container undefined"
    data-element="toggle"
    height={50}
    width={100}
  >
    <input
      className="sc-dIouRR lfHHoI rts-toggle__toggle"
      data-element="toggle-input"
      type="checkbox"
    />
    <span
      className="sc-idiyUo wyedq rts-toggle__background"
      data-element="toggle-background"
      height={50}
    />
  </div>
</div>
`;

exports[`Storyshots Components/Toggle Toggle checked 1`] = `
<div
  style={
    Object {
      "padding": "2rem",
    }
  }
>
  <div
    className="sc-bjUoiL iXvHuV rts-toggle__container undefined"
    data-element="toggle"
    height={25}
    width={50}
  >
    <input
      checked={true}
      className="sc-dIouRR cHWdFL rts-toggle__toggle"
      data-element="toggle-input"
      type="checkbox"
    />
    <span
      className="sc-idiyUo klHLrj rts-toggle__background"
      data-element="toggle-background"
      height={25}
    />
  </div>
</div>
`;

exports[`Storyshots Components/Toggle Toggle unchecked 1`] = `
<div
  style={
    Object {
      "padding": "2rem",
    }
  }
>
  <div
    className="sc-bjUoiL iXvHuV rts-toggle__container undefined"
    data-element="toggle"
    height={25}
    width={50}
  >
    <input
      className="sc-dIouRR cHWdFL rts-toggle__toggle"
      data-element="toggle-input"
      type="checkbox"
    />
    <span
      className="sc-idiyUo klHLrj rts-toggle__background"
      data-element="toggle-background"
      height={25}
    />
  </div>
</div>
`;
